<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/menu_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:labelFor="@id/et_visitor_name"
        android:text="@string/tv_visitor"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_menu_title"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_title" />

    <EditText
        android:id="@+id/et_visitor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/et_visitor_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_visitor"
        app:layout_constraintStart_toStartOf="@+id/tv_visitor"
        app:layout_constraintTop_toBottomOf="@+id/tv_visitor"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/bt_launch_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/bt_next_menu"
        app:layout_constraintEnd_toEndOf="@+id/et_visitor_name"
        app:layout_constraintStart_toStartOf="@+id/et_visitor_name"
        app:layout_constraintTop_toBottomOf="@+id/et_visitor_name" />

</androidx.constraintlayout.widget.ConstraintLayout>